--- a/PlantManiaGame/Base.lproj/Main.storyboard
+++ b/PlantManiaGame/Base.lproj/Main.storyboard
@@ -356,6 +356,36 @@
             </objects>
             <point key="canvasLocation" x="422" y="802"/>
         </scene>
+        <!--Plant Game View Controller-->
+        <scene sceneID="tdg-mS-wdF">
+            <objects>
+                <viewController id="zr2-fE-S69" customClass="PlantGameViewController" customModule="PlantManiaGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="J5A-M9-QWo" customClass="SKView">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tbj-j8-uq8">
+                                <rect key="frame" x="20" y="36" width="64" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <segue destination="BvN-Jx-9KT" kind="unwind" unwindAction="cancel:" id="zHv-7x-xZW"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="l5X-ZB-VET"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2oU-n0-r9l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="BvN-Jx-9KT" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-1571.0144927536232" y="34.239130434782609"/>
+        </scene>
         <!--Garden View Controller-->
         <scene sceneID="g29-Gv-wVp">
             <objects>
@@ -438,6 +468,17 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aPf-5J-vl4">
+                                <rect key="frame" x="115" y="600" width="185" height="78"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                <state key="normal" title="Start Game">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="zr2-fE-S69" kind="show" identifier="plantGameSegue" id="yOR-Jd-m4L"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="j1L-I3-wwe"/>
@@ -561,7 +602,7 @@
         <image name="plant2" width="512" height="512"/>
         <image name="plant3" width="512" height="512"/>
         <image name="seed" width="648" height="182"/>
-        <image name="sky" width="640" height="360"/>
+        <image name="sky" width="153.60000610351562" height="86.400001525878906"/>
         <image name="store" width="948" height="1682"/>
         <image name="store_button" width="1024" height="1024"/>
         <image name="sunflower-seed-clipart-1" width="500" height="500"/>
